--- a/src/App.css
+++ b/src/App.css
@@ -98,11 +98,27 @@ img {
 }
 
 ::-webkit-scrollbar {
-    width: 5px;
-    height: 5px;
-  }
+    width: 8px;
+    height: 8px;
+}
 
-  ::selection {
+::-webkit-scrollbar-thumb {
+    background-color: #00AFEF;
+    border-radius: 4px;
+}
+    
+/*
+::-webkit-scrollbar-track {
+    background-color: #00AFEF55;
+border-radius: 4px;
+}
+*/
+
+::-webkit-scrollbar-corner {
+      background-color: 'transparent';
+}
+
+::selection {
     color: white;
     background: #00AFEF
 }
